fixed contrast accessibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,12 @@
 
 :root {
   font-size: 50px;
-  --primary: #7674ff;
-  --secondary: #ee7ac0;
+  --primary: #7472f8;
+  --secondary: #973894;
 }
 
 body {
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
   margin: 0;
   padding: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
